--- a/tools/gestao-de-convidados/convidados.html
+++ b/tools/gestao-de-convidados/convidados.html
@@ -162,30 +162,28 @@
 </main>
 
 <script type="module">
-  // Módulos compartilhados
-  const PATH_BUS   = "/shared/marcoBus.js";
-  const PATH_STORE = "/shared/projectStore.js";
-  const PATH_INV   = "/shared/inviteUtils.js"; // ferramenta de convites (fonte de verdade)
-  const CANDIDATES = [
-    "https://cdn.jsdelivr.net/gh/fabiocolletto/Projeto-marco@main",
-    "https://rawcdn.githack.com/fabiocolletto/Projeto-marco/main"
-  ];
-  async function tryImport(url){ try{ return await import(url); } catch(e1){ try{ return await import(url+(url.includes('?')?'&':'?')+'t='+Date.now()); } catch(e2){ return null; } } }
-  async function loadShared(rel){ for(const base of CANDIDATES){ const mod = await tryImport(base+rel); if(mod) return mod; } return null; }
+  const {
+    loadAppModules,
+    dom,
+    text,
+    format,
+    ensureProjectWithList,
+    applyEventSummary,
+    busSync
+  } = await import('/shared/gestaoEventosApp.js');
 
-  const store = await loadShared(PATH_STORE);
-  const bus   = await loadShared(PATH_BUS);
-  const inv   = await loadShared(PATH_INV);  // { parseInvites, normalizePhone }
+  const { $, setPill } = dom;
+  const { esc, escAttr } = text;
+  const { fmtDateTime } = format;
+  const ensureProject = ensureProjectWithList;
+  const { requestCurrentProject } = busSync;
+
+  const { store, bus, inviteUtils: inv } = await loadAppModules();
   await store?.init?.();
 
   // Estado e utilitários
   const AUTO_SAVE_MS = 700;
   const state = { currentId:null, project:null, lista:[], dirty:false, saving:false, timer:null };
-  const $ = (s)=> document.querySelector(s);
-  const setPill = (el, kind, txt)=>{ el.className = 'pill '+kind; el.textContent = txt; };
-  const esc = (s)=> String(s==null?'':s).replace(/[&<>]/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;' }[m]));
-  const escAttr = (s)=> String(s==null?'':s).replace(/[&<>"'`]/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;','`':'&#96;' }[m]));
-  const fmtDateTime = (ts)=> ts? new Date(ts).toLocaleString() : '—';
 
   // Resumo
   const evTitle = $('#g2_evTitle');
@@ -222,12 +220,23 @@
   const estadoMetaUpd = $('#g2_estadoMetaUpd');
   const pillSaving = $('#g2_pillSaving');
 
+  const renderResumo = ()=> applyEventSummary({
+    project: state.project,
+    currentId: state.currentId,
+    elements: {
+      title: evTitle,
+      tipoData: resTipoData,
+      endereco: resEndereco,
+      anfitriao: resAnfitriao,
+      cerimonial: resCerimonial,
+      linkPill: pillLink,
+      metaId: estadoMetaId,
+      metaAtualizado: estadoMetaUpd
+    }
+  });
+
   function ensureShape(o){
-    o ||= {}; o.cerimonialista ||= { nomeCompleto:"", telefone:"", redeSocial:"" };
-    o.evento ||= { nome:"", data:"", hora:"", local:"", tipo:"", endereco:{}, anfitriao:{} };
-    o.evento.endereco ||= {}; o.evento.anfitriao ||= {};
-    o.lista ||= [];
-    return o;
+    return ensureProject(o);
   }
   function setDirty(v){ state.dirty=!!v; if(!state.saving){ setPill(pillSaving, v? 'warn':'ok', v? 'Alterações não salvas':'Pronto'); } }
   function setSaving(v){ state.saving=!!v; setPill(pillSaving, v? 'saving':'ok', v? 'Salvando…':'Pronto'); }
@@ -267,8 +276,6 @@
 
   // ======== Render ========
   const labelConf = (c)=> c==='confirmado'? 'Confirmado' : c==='nao'? 'Não vai' : 'Pendente';
-  function renderResumo(){ const p=state.project||{}; const ev=p.evento||{}; const end=ev.endereco||{}; const anf=ev.anfitriao||{}; const cer=p.cerimonialista||{}; evTitle.textContent=ev.nome||'—'; resTipoData.textContent=[ev.tipo,ev.data,ev.hora].filter(Boolean).join(' • ')||'—'; resEndereco.textContent='Endereço'+(end.logradouro||end.numero||end.bairro||end.cidade? ': '+[end.logradouro,end.numero,end.bairro,end.cidade].filter(Boolean).join(', '):''); resAnfitriao.textContent='Anfitrião'+(anf.nome? ': '+anf.nome:''); resCerimonial.textContent='Cerimonialista'+(cer.nomeCompleto? ': '+cer.nomeCompleto:''); setPill(pillLink, state.currentId? 'ok':'warn', state.currentId? 'Vinculado':'Sem evento'); estadoMetaId.textContent=state.currentId||'—'; estadoMetaUpd.textContent=fmtDateTime(p.updatedAt); }
-
   function phoneCellHTML(t){ const raw=String(t.telefone||''); const e164=normalizeToE164(raw); const nat = nationalTextIfBR(e164||raw); const withName = nat? `${nat}${t.titular? `<div class="muted">de ${esc(t.titular)}</div>`:''}` : null; const isReady=!!e164; const display = esc(withName||raw); const warn = !isReady && raw.trim().length>0; const hint='Telefone não está no formato internacional (E.164) — ajustar para uso no WhatsApp.'; return warn? `<span class="cell-phone invalid">${display}<span class="warn-icon" title="${hint}" aria-label="${hint}">⚠</span></span>` : (withName||display||''); }
 
   function renderList(){ const rows=state.lista||[]; listMeta.textContent=`${rows.length} itens`; if(!rows.length){ listBody.innerHTML='<tr><td colspan="7" class="small">Nenhum convidado.</td></tr>'; updateKPIs(); return; } listBody.innerHTML = rows.map((t,i)=>{ const names = composeNames(t.titular, t.acompanhantes); const totalCalc = Number(t.total) || (1 + ((t.acompanhantes||[]).length)); return `<tr data-i="${i}">\n        <td>${i+1}</td>\n        <td>${esc(names)}</td>\n        <td>${totalCalc}</td>\n        <td>${phoneCellHTML(t)}</td>\n        <td>${esc(t.mesa||'')}</td>\n        <td>${esc(labelConf(t.confirmacao))}</td>\n        <td class="right col-actions"><button class="icon-btn" data-act="edit" title="Editar" aria-label="Editar">✎</button></td>\n      </tr>`; }).join(''); updateKPIs(); }
@@ -296,9 +303,9 @@
   bus.subscribe('ac:project-updated', async ({ id, updatedAt })=>{ if(id && id===state.currentId){ if(updatedAt){ estadoMetaUpd.textContent = fmtDateTime(updatedAt); } await loadCurrent(id); } });
   bus.subscribe('ac:request-current', ()=>{ if(state.currentId){ try{ bus.publish('ac:open-event',{ id: state.currentId, from:'convidados' }); }catch{} } });
 
-  async function loadCurrent(id){ state.currentId=id; state.project = id? await store.getProject?.(id) : null; ensureShape(state.project); state.lista = [...(state.project.lista||[])]; setDirty(false); setSaving(false); const p=state.project||{}; const ev=p.evento||{}; const end=ev.endereco||{}; const anf=ev.anfitriao||{}; const cer=p.cerimonialista||{}; evTitle.textContent=ev.nome||'—'; resTipoData.textContent=[ev.tipo,ev.data,ev.hora].filter(Boolean).join(' • ')||'—'; resEndereco.textContent='Endereço'+(end.logradouro||end.numero||end.bairro||end.cidade? ': '+[end.logradouro,end.numero,end.bairro,end.cidade].filter(Boolean).join(', '):''); resAnfitriao.textContent='Anfitrião'+(anf.nome? ': '+anf.nome:''); resCerimonial.textContent='Cerimonialista'+(cer.nomeCompleto? ': '+cer.nomeCompleto:''); setPill(pillLink, state.currentId? 'ok':'warn', state.currentId? 'Vinculado':'Sem evento'); estadoMetaId.textContent=state.currentId||'—'; estadoMetaUpd.textContent=fmtDateTime(p.updatedAt); renderList(); updateKPIs(); }
+  async function loadCurrent(id){ state.currentId=id; state.project = id? await store.getProject?.(id) : null; ensureShape(state.project); state.lista = [...(state.project.lista||[])]; setDirty(false); setSaving(false); renderResumo(); renderList(); updateKPIs(); }
   async function setCurrent(id){ await loadCurrent(id); }
-  async function trySyncWithEventos(maxTries=8, interval=400){ return new Promise(resolve=>{ let tries=0; const ask=()=>{ try{ bus.publish('ac:request-current'); }catch{} tries++; if(state.currentId){ resolve(true); return; } if(tries<maxTries){ setTimeout(ask,interval);} else { resolve(false);} }; ask(); }); }
+  const trySyncWithEventos = (maxTries=8, interval=400)=> requestCurrentProject(bus, ()=>state.currentId, { maxTries, interval });
 
   // Self-tests
   function runSelfTests(){ const out=[]; try{ const x=parseNamesStr('Fábio, Coleto'); if(!(x.titular==='Fábio' && x.acompanhantes[0]==='Coleto' && x.total===2)) throw new Error('parseNamesStr'); out.push('parseNamesStr: OK'); }catch(e){ out.push('parseNamesStr: FAIL - '+e.message); }
