docs: clarify widget embed instructions

--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,3 +1,4 @@
+<!-- Template interno do SvelteKit: não incorporar diretamente em WordPress/Elementor. Use dist/app-base-widget.html. -->
 <!doctype html>
 <html lang="pt-br">
   <head>
