--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,4 +1,4 @@
-<!-- Template interno do SvelteKit: não incorporar diretamente em WordPress/Elementor. Use dist/app-base-widget.html. -->
+<!-- Template interno do SvelteKit: não incorporar diretamente em WordPress/Elementor. Utilize docs/embed/app-base-snippet.html. -->
 <!doctype html>
 <html lang="pt-br">
   <head>
