Documenta fluxo de deploy do snippet AppBase

--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -1,4 +1,4 @@
-<!-- Template interno do SvelteKit: não incorporar diretamente em WordPress/Elementor. Utilize docs/embed/app-base-snippet.html. -->
+<!-- Template interno do SvelteKit: não incorporar diretamente em WordPress/Elementor. Somente o snippet hospedado (docs/embed/app-base-snippet.html) é suportado. -->
 <!doctype html>
 <html lang="pt-br">
   <head>
